--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
   html,
   body {
-  	background: black;
+  	background: linear-gradient(black, pink);
   	color: white;
   	font-size: 20px;
   	height: 100%;
   }
 
-  button {
+  .randomNumber {
   	border-radius: 100px;
   	padding: 15px;
   	background: green;
@@ -14,13 +14,18 @@
   	border: none;
   	margin: 10px;
   	transition: ease 0.5s;
+  	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	width: 25%;
+  	font-size: 10px;
   }
 
-  button:hover {
+  .randomNumber:hover {
   	background: blue;
   }
 
-  button:focus {
+  .randomNumber:focus {
   	background: rgb(123, 11, 143);
   }
 
@@ -59,11 +64,63 @@
   	align-items: center;
   }
 
-  .randomNumber {
-  	display: flex;
-  	justify-content: center;
-  	align-items: center;
-  	font-size: 23px;
+
+
+  .randomNumberBottom {
+  	border-radius: 100px;
+  	padding: 15px;
+  	background: green;
+  	color: white;
+  	border: none;
+  	margin: 10px;
+  	transition: ease 0.5s;
+  	text-align: center;
+  }
+
+  /* #eef1f7
+  #d7dbe2
+  #f5f8fc */
+  .buttonGameSub {
+  	border-radius: 50%;
+  	padding: 0px 5px;
+  	background: #d0d4da;
+  	border: 1px solid #e6e6e6;
+  }
+
+  .bodyBtnHeader {
+  	padding: 15px;
+  	background: linear-gradient(#ffffff, #989b9f);
+  	border-radius: 50%;
+  	margin: 0 5px 0;
+  }
+
+  .buttonSubScore {
+  	border-radius: 10%;
+  	height: 60px;
+  	margin: 0 7px;
+  	padding: 0px 5px;
+  	background: #d0d4da;
+  	border: 1px solid #e6e6e6;
+  }
+
+  .bodyCheckContainer button {
+  	font-size: 15px;
+  }
+
+  .bodyBtnRestartGame {
+  	padding: 9px;
+  	background: linear-gradient(#ffffff, #989b9f);
+  	border-radius: 50%;
+  	margin: 0 5px 0;
+  }
+
+  .btnRestartGame {
+  	padding: 15px;
+  	background: #d0d4da;
+  	border: 1px solid #e6e6e6;
+  	border-radius: 50%;
+  	margin: 0 5px 0;
+  	font-weight: bold;
   }
 
 
@@ -98,7 +155,8 @@
   }
 
   .bodyCheckContainer button {
-  	font-size: 9px;
+  	font-size: 13px;
+  	color: #4e4545;
   }
 
   .youWinGame {
@@ -118,7 +176,7 @@
 
   .imgAdmin img {
   	max-width: 100%;
-  	width: 20%;
+  	width: 10%;
   	height: 10%;
   	border-radius: 80%;
   }
